--- a/requirements.txt
+++ b/requirements.txt
@@ -71,6 +71,10 @@ kivy-deps.angle==0.4.0
 kivy-deps.glew==0.3.1
 kivy-deps.sdl2==0.7.0
 Kivy-Garden==0.1.5
+kivy==2.1.0
+kivy-deps.angle==0.3.3
+kivy-deps.sdl2==0.3.2
+kivy-deps.glew==0.3.1
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib-inline==0.1.7
